--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -2,7 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"       
         xmlns:local="clr-namespace:seawatcher3000"
-        Title="Nikon Capability Explorer" Height="768" Width="1024" MinHeight="480" MinWidth="640">
+        Title="SeaWatcher3000" Height="768" Width="1024" MinHeight="480" MinWidth="640">
     <StackPanel>
     <TextBlock Width="300" Height="20">
     Type some text into the TextBox and press the Enter key.
