--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -2,7 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"       
         xmlns:local="clr-namespace:seawatcher3000"
-        Title="SeaWatcher3000" Height="768" Width="1024" MinHeight="480" MinWidth="640">
+        Title="SeaWatcher3000" Height="768" Width="1024" MinHeight="480" MinWidth="640" Closed="Window_Closed">
     <StackPanel VerticalAlignment="Center">
         <ToggleButton Content="Start Live Feed" Height="80" Width="158" x:Name="toggleButton1" Background="#FFDDDDDD"
                       Checked="OnToggledHandler" Unchecked="OnToggledHandler"/>
